# uascode

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.UK8662  manifest.xml  package.xml  reach_set.txt  real_set.txt  test_MavrosListen.sh  test_ObsDisplay.sh  test_ObsPlot.sh  test_PlanNode.sh  test_PlanNode2.sh  test_PlanNode3.sh  test_PlanNodeAdsb.sh  test_mavlinkRec.sh  test_obstacle_comm.sh  test_predict.sh
LogConfigure/: log4cxx_AdsbFromFile.properties  log4cxx_MavSendNode.properties  log4cxx_MavrosListen.properties  log4cxx_ObsFromFile.properties  log4cxx_PlanNode.properties
data/: 20140423-173735adsb.txt  20140423-173735bytes.txt  20140423-233040adsb.txt  20140423-233040afs.txt  20140423-233040bytes.txt  20140423-233040obs.txt  20140423-234158adsb.txt  20140423-234158afs.txt  20140423-234158bytes.txt  20140423-234158obs.txt  20140423-234645adsb.txt  20140423-234645afs.txt  20140423-234645bytes.txt  20140423-234645obs.txt  20140424-002228adsb.txt  20140424-002228bytes.txt  20140424-002347adsb.txt  20140424-002347afs.txt  20140424-002347bytes.txt  20140424-002347obs.txt  20140424-003901adsb.txt  20140424-003901afs.txt  20140424-003901bytes.txt  20140424-003901obs.txt  20140424-004041adsb.txt  20140424-004041afs.txt  20140424-004041bytes.txt  20140424-004041obs.txt  20140424-004229adsb.txt  20140424-004229afs.txt  20140424-004229bytes.txt  20140424-004229obs.txt  20140424-004413adsb.txt  20140424-004413afs.txt  20140424-004413obs.txt  20140424-010414adsb.txt  20140424-010414afs.txt  20140424-010414bytes.txt  20140424-010414obs.txt  20140508-164714adsb.txt  (+231 more)
mavros_notes/: mavros.cpp  mavros_uas.h  mission_current.cpp  multi_adsb3.cpp  notes.txt
msg/: AccelXYZ.msg  ColliPoint.msg  GlobalPos.msg  IfCollision.msg  IfMavlinkGood.msg  IfRecMsg.msg  MultiObsMsg.msg  ObsMsg.msg  PosSetPointFlag.msg  WpCurrent.msg  WpNumber.msg
other_files/: CMakeLists.txt  colli_point.cpp  common.xml  gps2_raw.cpp  help_notes.txt  mavros_plugins.xml  mission_current.cpp  multi_adsb3.cpp  package.xml
parameters/: parameters_sitl.txt
pngs_good/: obstacle_11349796.txt  obstacle_4196010.txt
python_plot/: plot_example1.py  plot_ratio.py  plot_set.py  plot_set_color.py  plot_set_part.py  set_area.py
qgc_notes/: QGCMapWidget.cc  QGCMapWidget.h  UAS.cc  UASInterface.h  notes.txt
records/: LoadSendConfig.txt  LoadSendConfigSimu.txt  divide_record.txt  fs_state_large.txt  names.txt  obs_10934723.txt  obss_log0.txt  obss_log1.txt  obstacle_10734770.txt  obstacle_10942331.txt  obstacle_10947687.txt  obstacle_11214846.txt  offsets1000.txt  offsets1100.txt  offsets1200.txt  offsets1500.txt  offsets200.txt  offsets400.txt  offsets500.txt  offsets600.txt  offsets700.txt  offsets800.txt  offsets900.txt  offsetsA1000.txt  offsetsA1200.txt  offsetsA200.txt  offsetsA400.txt  offsetsA600.txt  offsetsA800.txt  offsets_adsbA10.txt  offsets_adsbA100.txt  offsets_adsbA110.txt  offsets_adsbA120.txt  offsets_adsbA130.txt  offsets_adsbA140.txt  offsets_adsbA150.txt  offsets_adsbA160.txt  offsets_adsbA170.txt  offsets_adsbA180.txt  offsets_adsbA190.txt  (+67 more)
recordsHIL/: LoadSendConfigSimu.txt  offsets_adsb30.txt  scaled_obstacle_10734770.txt  scaled_obstacle_10934723.txt  scaled_obstacle_10942331.txt  simuObsScaled.txt  simu_offsets30.txt  traj_log.txt
src/MatlabCodes/: adsb_offsets.m  adsb_offsets_scale.m  convert.m  disp_obs_whole.m  disp_obss.m  load_distance.m  load_distance2.m  obstacle_plane.m  plot_full_path.m  plot_scaled_obs.m  plot_set.m  plot_sim_path.m  plot_sim_plan.m  plot_sim_plan.m~  plot_states.m  plot_wp_navigate.m  rs_ls.fig  see_min_dis.m  simu_offsets.m  simu_offsets_scale.m  traj_circle.fig
src/MavLink/yc_common/: mavlink.h  mavlink_msg_adsb_msg.h  mavlink_msg_adsb_short.h  mavlink_msg_attitude3.h  mavlink_msg_colli_point.h  mavlink_msg_global_position_setpoint_flag_int.h  mavlink_msg_if_collision.h  mavlink_msg_inter_receive.h  mavlink_msg_multi_adsb.h  mavlink_msg_multi_adsb3.h  mavlink_msg_wp_number.h  mavlink_msg_yc_float.h  mavlink_msg_yc_hil_attitude.h  testsuite.h  version.h  yc_common.h
src/OtherLibs/Dubins2D/: dubins.cpp  dubins.h
src/Planner/: geofence.txt  parameters.txt~
src/Planner/UserStructs/: MissionSimFlagPt.cpp  MissionSimFlagPt.h  MissionSimPt.h  PlaneStateSim.cpp  PlaneStateSim.h  PredictColliReturn.cpp  PredictColliReturn.h  SetPointsVh.h  SpaceLimit.cpp  SpaceLimit.h  WpLength.h  obstacle3D.h  point2D.h  resultComb.h
src/Planner/UserTypes/: .L1ControlSim.cpp.swp  .L1ControlSim.hpp.swp  .TECsSim.cpp.swp  .TECsSim.hpp.swp  L1ControlSim.cpp  L1ControlSim.hpp  NavigatorSim.cpp  NavigatorSim.hpp  ObsHelper.cpp  ObsHelper.hpp  PathGenerator.cpp  PathGenerator.hpp  ReachabilitySet.cpp  ReachabilitySet.hpp  StateUpdateSim.cpp  StateUpdateSim.hpp  TECsSim.cpp  TECsSim.hpp  Vec2.hpp  test_ReachSet.cpp  test_l1.cpp  test_navigator.cpp  test_pathgen.cpp  test_tecs.cpp  test_update.cpp
src/Planner/Utils/: CheckCollision.cpp  CheckCollision.h  CreateSetPoints.cpp  CreateSetPoints.h  DubinsLength2.cpp  DubinsLength2.h  DubinsLength3D.cpp  DubinsLength3D.h  NotInRadius.cpp  NotInRadius.h  PointInPoly.cpp  PointInPoly.h  test_dubin_length.cpp  test_pointinpoly.cpp
src/adsb/UserStructs/: AdsbMsg.h  AdsbQGC.h  DecodeMsg.h  HeartMsg.h  OwnerMsg.h  StatusMsg.h
src/adsb/UserTypes/: MsgSender.cpp  MsgSender.hpp  ObsMonitor.cpp  ObsMonitor.hpp  SageDecoder.cpp  SageDecoder.hpp  adsb_test.cpp  sender_test.cpp
src/adsb/Utils/: AdsbDecode.cpp  AdsbDecode.h  AdsbMsgToQGC.cpp  AdsbMsgToQGC.h  Decode.h  HeartDecode.cpp  HeartDecode.h  StatusDecode.cpp  StatusDecode.h
src/common/Test/: ScaleSimuObs.cpp  main_test.cpp  obs_complete.cpp  obs_intropolate.cpp  read_dis.cpp  separate_obs.cpp
src/common/UserStructs/: constants.h
src/common/UserTypes/: AdsbFromFile.cpp  AdsbFromFile.hpp  MavlinkReceiver.cpp  MavlinkReceiver.hpp  MavlinkSender.cpp  MavlinkSender.hpp  MavlinkTCP.cpp  MavlinkTCP.hpp  ObsFromFile.cpp  ObsFromFile.hpp  ScaleObsFromFile.cpp  ScaleObsFromFile.hpp  mavlinksend_test.cpp  mavlinktcp_log.cpp  test_AdsbFromFile.cpp  test_obsfromfile.cpp  test_receiver.cpp  (+2 more)
(+62 files in other folders)
